--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "editorType": [
     "figma"
   ],
-  "ui": "ui.html",
+  "ui": "ui/ui.html",
   "networkAccess": {
     "allowedDomains": [
       "none"
